--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
-name: CI
+name: Python application CI
 
-on:
-  push:
-    branches: [ main ]
+on: [push]
 
 jobs:
   build:
@@ -10,19 +8,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: 3.8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m venv env
+        source env/bin/activate
         pip install -r requirements.txt
-    - name: Lint with Flake8
+    - name: Run tests
       run: |
-        pip install flake8
-        flake8 .
-    - name: Test with pytest
-      run: |
-        pip install pytest
+        source env/bin/activate
         pytest
